--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -23,6 +23,7 @@ app/assets/stylesheets/items/new.css %>
         </p>
         <%= f.file_field :image, id:"item-image" %>
       </div>
+      <div id="image-list"></div>
     </div>
     <%# /商品画像 %>
     <%# 商品名と商品説明 %>
@@ -139,7 +140,7 @@ app/assets/stylesheets/items/new.css %>
     <%# 下部ボタン %>
     <div class="sell-btn-contents">
       <%= f.submit "変更する" ,class:"sell-btn" %>
-      <%=link_to 'もどる', "#", class:"back-btn" %>
+      <%=link_to 'もどる', root_path, class:"back-btn" %>
     </div>
     <%# /下部ボタン %>
   </div>
