詳細画面で複数画像の表示

--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -33,6 +33,16 @@
   object-fit: contain;
 }
 
+.other-images {
+  display: flex;
+  justify-content: space-between;
+}
+
+.other-item-image {
+  height: 40vh;
+  width: auto;
+}
+
 .item-price-box {
   margin: 25px 0px;
   display: flex;
